Fix shadow z-index

--- a/src/assets/styles/modules.css
+++ b/src/assets/styles/modules.css
@@ -20,6 +20,7 @@
 	height: 114px;
 }
 .shadow-wrapper::before {
+	z-index: 1;
 	height: 38px;
 	top: -10px;
 	background: linear-gradient(
